--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.cdnfonts.com/css/lastik');
 @import url('https://rsms.me/inter/inter.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
 
 :root {
   --monoFont: 'JetBrains Mono', 'Courier New', Courier, monospace;
   --sansDisplay: "InterDisplay", "Helvetica", "Arial", sans-serif;
-  --serifFont: "EB Garamond", "Garamond", serif;
+  --serifFont: "Lastik", "Garamond", serif;
   --sansText: "Inter", "Helvetica", "Arial", sans-serif;
   --darkBG: #090909;
   --shadow: 0px 0px 10px 10px rgba(14,13,13,0.08);
@@ -36,7 +37,7 @@
   --dateCol: rgb(82, 78, 78);
   --codeCol: rgb(240, 220, 220);
   --titleCol: rgb(232, 218, 218);
-  --linkCol: rgb(44, 60, 207);
+  --linkCol: rgb(135, 147, 255);
   --postBG: rgb(22, 22, 22);
   --preCol: #282c34;
   --mouse-X: 0px; --mouse-Y: 0px;
