--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -192,9 +192,6 @@
 
   }
 
-
-  /* -- TESTING -- */
-
   .main>div {
     border: 1px solid rgba(255, 255, 255, 0.116);
     background-color: var(--card-bg);
@@ -256,49 +253,51 @@
   }
 
 
-  .contact>div:nth-of-type(1) {
+  .contact>div:nth-of-type(2) {
     font-size: small;
     width: 100%;
     color: var(--gray);
     order: 2;
   }
 
-  .contact>div:nth-of-type(2) {
-    font-size: 1.1em;
-    justify-self: flex-end;
-    width: 100%;
+  .contact>div:nth-of-type(1) {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1em;
     height: 100%;
-    text-align: right;
+    margin-right: 0em;
     order: 1;
   }
 
-
-  .contact>div:nth-of-type(2) h3,
-  .contact>div:nth-of-type(2) span {
-    text-decoration: none;
-    font-size: 1.3em;
-    color: rgb(255, 255, 255);
+  .contact>div:nth-of-type(1) h3 {
+    padding: 0 0.2em;
+    position: relative;
+    overflow: hidden;
+    color: white;
+    font-size: 2em;
     font-weight: 400;
-    width: 100%;
     height: 1.4em;
-    margin: 0em;
-    font-family: var(--font-geist-sans), monospace;
+    margin: 0;
   }
 
-  .title>div:nth-of-type(1) p,
-  .title>div:nth-of-type(1) span {
-    text-decoration: none;
-    font-size: 1em;
+
+  .title>div:nth-of-type(1) {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1em;
+  }
+
+  .title>div:nth-of-type(1) p {
+    padding: 0 0.2em;
+    position: relative;
+    overflow: hidden;
     color: var(--gray);
     font-weight: 400;
-    width: 100%;
-    height: 1.2em;
-    margin: 0em;
-    text-align: right;
+    height: 1.4em;
+    margin: 0;
   }
 
-  .cv>p,
-  .cv>span {
+  .cv>h3 {
     text-decoration: none;
     font-size: 1em;
     color: white;
@@ -306,7 +305,9 @@
     width: 100%;
     height: 1.2em;
     margin: 0em;
-    text-align: right;
+    text-align: left;
+    position: relative;
+    overflow: hidden;
   }
 
   .links {
@@ -318,20 +319,11 @@
 
   .title {
     width: 100%;
-    flex-grow: 1;
   }
 
   .title p {
     width: 100%;
   }
-
-  .title>div:nth-of-type(1) {
-    justify-self: flex-end;
-    width: 100%;
-    text-align: right;
-    margin-right: 1em;
-  }
-
 }
 
 .links a {
