--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --black: #000;
   --white: #fff;
-  --gray: #3f3f3f;
+  --gray: #525252;
   --border: rgba(255, 255, 255, 0.143);
   --size: 90%;
   --card-bg: rgb(11, 11, 11);
