--- a/src/app/components/Background/index.module.css
+++ b/src/app/components/Background/index.module.css
@@ -4,6 +4,7 @@
    left: 0;
    width: 0;
    height: 0;
+   background-color: rgb(0, 0, 0);
 }
 
 @media screen and (min-width: 1024px) {
@@ -19,43 +20,14 @@
       overflow: hidden;
    }
 
-   .container:after {
+   /* .container:after {
       width: 100%;
       content: '';
       height: 100%;
       top: 0;
       left: 0;
       position: absolute;
-      background: linear-gradient(to left, #000, transparent 40%, transparent 60%, #000);
-      /* backdrop-filter: blur(0.1em); */
+      background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
+   } */
 
-   }
-
-   .grid {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      /* Use flexbox for the main grid container */
-   }
-
-   .column {
-      flex: 1;
-      /* Each column will take up equal space */
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-   }
-
-   .pixel {
-      flex: 1;
-      /* Each pixel will take up equal space within the column */
-      border: 1px solid rgba(255, 255, 255, 0.05);
-      background-color: transparent;
-      transition: background-color 0.5s ease-out;
-   }
-
-   .pixel.active {
-      background-color: #ffffff7f;
-      transition: background-color 0s;
-   }
 }
