--- a/src/app/components/Background/index.module.css
+++ b/src/app/components/Background/index.module.css
@@ -5,6 +5,7 @@
    width: 0;
    height: 0;
    background-color: rgb(0, 0, 0);
+   visibility: hidden;
 }
 
 @media screen and (min-width: 1024px) {
@@ -20,7 +21,7 @@
       overflow: hidden;
    }
 
-   /* .container:after {
+   .container:after {
       width: 100%;
       content: '';
       height: 100%;
@@ -28,6 +29,6 @@
       left: 0;
       position: absolute;
       background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
-   } */
+   }
 
 }
